mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
    - port: 9925
      targetPort: 9000
